--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,11 @@ html
           = stylesheet_link_tag    'application', media: 'all'
           = javascript_include_tag 'application'
           = csrf_meta_tags
-          link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet" 
+          /link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet"
+          /link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"
+
+          script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"
+            | $(document).ready(function() { $('.dropdown-menu').find('form').click(function (e) { e.stopPropagation(); });});
   body
     .container
       = render 'shared/header'
