--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -40,10 +40,13 @@ hr
     .row
       .col-sm-12
         .col-sm-12
-          | \&copy; 2007–2014 Электронная база недвижимости. Приложения для
-          a href="#" 
+          | &copy; 2007–2014 Электронная база недвижимости. Приложения для
+          '
+          a href="#"
             i.fa.fa-apple.fa-lg
+          '
           | и
+          '
           a href="#" 
             i.fa.fa-android.fa-lg
 hr
