--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,15 @@
 doctype html
 html
   head
-    title Nmir
+    title
+      | Multilisting
     meta charset="utf-8" 
-      meta content="IE=edge" http-equiv="X-UA-Compatible" 
-        meta content="width=device-width, initial-scale=1" name="viewport" 
-          = stylesheet_link_tag    'application', media: 'all'
-          = javascript_include_tag 'application'
-          = csrf_meta_tags
-          link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet" 
+    meta content="IE=edge" http-equiv="X-UA-Compatible"
+    meta content="width=device-width, initial-scale=1" name="viewport"
+    = stylesheet_link_tag    'application'
+    = javascript_include_tag 'application'
+    = csrf_meta_tags
+    link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet"
   body
     .container
       = render 'shared/header'
