--- a/app/views/locations/index.js.erb
+++ b/app/views/locations/index.js.erb
@@ -1,1 +1,1 @@
-$("#region-selector").html("<%= escape_javascript(render partial: 'advertisments/regions', locals: { locations: @locations } ) %>");
+$("#region-selector").html("<%= escape_javascript(render partial: 'advertisements/regions', locals: { locations: @locations } ) %>");
