--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,5 +1,6 @@
 = form_tag search_advertisements_path, remote: true, class: 'form-inline super-form'
   = hidden_field_tag :city, '', id: 'city-select'
+  = hidden_field_tag :district, '', id: 'district-select'
   = hidden_field_tag :category, '', id: 'category-value'
   = hidden_field_tag :offer_type, '', id: 'offer-type-value'
   = hidden_field_tag :region, '', id: 'region-select'
@@ -7,43 +8,45 @@
   = hidden_field_tag :space_unit, '', id: 'space-unit-value'
   = hidden_field_tag :date_from, '', id: 'date-from-value'
   = hidden_field_tag :date_to, '', id: 'date-to-value'
+  = hidden_field_tag :adv_type, '', id: 'adv-type-value'
+  = hidden_field_tag :property_type, '', id: 'property-type-value'
   label.control-label for="prependedtext"
     i.fa.fa-share.fa-lg
     | предложение
   .btn-group.queue-one data-toggle="buttons"
-    button.btn.btn-default value="#{AdvEnums::OFFER_TYPES.index(:sale)}" hid="offer-type-value" onclick="set_hidden_multi(this)" продажа
-    button.btn.btn-default value="#{AdvEnums::OFFER_TYPES.index(:for_rent)}" hid="offer-type-value" onclick="set_hidden_multi(this)"  аренда
-    button.btn.btn-default value="#{AdvEnums::OFFER_TYPES.index(:day)}" hid="offer-type-value" onclick="set_hidden_multi(this)"  посуточно
+    button.btn.btn-default.SetHideMulti value="#{AdvEnums::OFFER_TYPES.index(:sale)}"    hid="offer-type-value"  продажа
+    button.btn.btn-default.SetHideMulti value="#{AdvEnums::OFFER_TYPES.index(:for_rent)}"    hid="offer-type-value"   аренда
+    button.btn.btn-default.SetHideMulti value="#{AdvEnums::OFFER_TYPES.index(:day)}"    hid="offer-type-value"   посуточно
   label.control-label for="prependedtext"
     i.fa.fa-reply.fa-lg
     | спрос
   .btn-group data-toggle="buttons"
-    button.btn.btn-default value="#{AdvEnums::OFFER_TYPES.index(:buy)}" hid="offer-type-value" onclick="set_hidden_multi(this)" куплю
-    button.btn.btn-default value="#{AdvEnums::OFFER_TYPES.index(:rent)}" hid="offer-type-value" onclick="set_hidden_multi(this)" сниму
+    button.btn.btn-default.SetHideMulti value="#{AdvEnums::OFFER_TYPES.index(:buy)}"    hid="offer-type-value"  куплю
+    button.btn.btn-default.SetHideMulti value="#{AdvEnums::OFFER_TYPES.index(:rent)}"    hid="offer-type-value"  сниму
   .form.form-inline.queue-two
     label.control-label for="prependedtext"
       i.fa.fa-home.fa-lg
       | жилая
     .btn-group data-toggle="buttons"
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:flat)}" hid="category-value" onclick="set_hidden_multi(this)" квартиры
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:newbuild)}" hid="category-value" onclick="set_hidden_multi(this)" новостройки
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:house)}" hid="category-value" onclick="set_hidden_multi(this)" дома, дачи, коттеджи
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:ijs)}" hid="category-value" onclick="set_hidden_multi(this)" участки под ИЖС
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:room)}" hid="category-value" onclick="set_hidden_multi(this)" гостинки
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:room)}" hid="category-value" onclick="set_hidden_multi(this)" комнаты
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:garage)}" hid="category-value" onclick="set_hidden_multi(this)" гаражи
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:flat)}"    hid="category-value"  квартиры
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:newbuild)}"    hid="category-value"  новостройки
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:house)}"    hid="category-value"  дома, дачи, коттеджи
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:ijs)}"    hid="category-value"  участки под ИЖС
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:room)}"    hid="category-value"  гостинки
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:room)}"    hid="category-value"  комнаты
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:garage)}"    hid="category-value"  гаражи
   .form.form-inline.queue-two
     label.control-label for="prependedtext"
       i.fa.fa-briefcase.fa-lg
       | коммерческая
     | &nbsp;
     span.btn-group.btn-group data-toggle="buttons"
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:office)}" hid="category-value" onclick="set_hidden_multi(this)" офисы
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:trade)}" hid="category-value" onclick="set_hidden_multi(this)" торговля и сервис
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:storage)}" hid="category-value" onclick="set_hidden_multi(this)" склад и пр-во
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:cafe)}" hid="category-value" onclick="set_hidden_multi(this)" бары, рестораны, кафе
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:land)}" hid="category-value" onclick="set_hidden_multi(this)" земля, площадки
-      button.btn.btn-default value="#{AdvEnums::CATEGORIES.index(:free_appointment)}" hid="category-value" onclick="set_hidden_multi(this)" другого и свободного назначения
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:office)}" hid="category-value"   офисы
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:trade)}" hid="category-value"   торговля и сервис
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:storage)}" hid="category-value"   склад и пр-во
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:cafe)}" hid="category-value"   бары, рестораны, кафе
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:land)}" hid="category-value"   земля, площадки
+      button.btn.btn-default.SetHideMulti value="#{AdvEnums::CATEGORIES.index(:free_appointment)}" hid="category-value"   другого и свободного назначения
 
   /! тип недвижа
   .form.form-inline.queue-tree
@@ -52,7 +55,7 @@
       | место
     span
       #region-select-button.button.btn.btn-default data-target=".lbs-example-modal-lg" data-toggle="modal"
-        = @location.blank? ? 'Выберите местоположение' : @location.title
+        = @location.blank? ? 'Выберите город' : @location.title
         i.caret
       #region-select-modal.modal.fade.lbs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel1" role="dialog" tabindex="-2"
         .modal-dialog
@@ -61,19 +64,23 @@
               button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
               h4.modal-title Выберите местоположение
             .row.modal-body
-              -@regions.each do |region|
-                span
-                  button.btn.btn-default data-toggle="buttons" href="#" id="region-#{region[1]}" region="#{region[1]}" onclick="click_region(this);"  =region[0]
+              - @regions.each do |region|
+                = region.title
+                p
+                - Location.children_of(region.id).each do |city|
+                  span
+                    button.btn.btn-default.ClickRegion data-toggle="buttons"  id="city-#{region.id}" region="#{region.id}" city="#{city.id}"   =city.title
+                p
             .modal-footer
               span.pull-left
                 span.small для уточнений:
                 a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
               button.btn.btn-default data-dismiss="modal" type="button"  Отмена
-              button.btn.btn-primary onclick="select_region();" type="button"  Выбрать
+              button.btn.btn-primary.SelectRegion  type="button"  Выбрать
     .btn-group.btn-group
       .btn-group.btn-group
         #city-select-button.button.btn.btn-default data-target=".bs-example-modal-lg" data-toggle="modal"
-          | Выберите город
+          | Выберите район
           i.caret
         #city-select-modal.modal.fade.bs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
           .modal-dialog
@@ -87,9 +94,10 @@
                   span.small для уточнений:
                   a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
                 button.btn.btn-default data-dismiss="modal" type="button"  Отмена
-                button.btn.btn-primary mv='city-select-modal' onclick="close_modal(this);" type="button"  Выбрать
+                button.btn.btn-primary.SelectDistrict mv='city-select-modal'  type="button"  Выбрать
       button.btn.btn-default type="button"
         span.fa.fa-times
+          |x
   div
     .form.form-group.form-inline.queue-four role="form"
       .form.form-group.form-inline
@@ -111,32 +119,32 @@
                     a href="#"
                       i.fa.fa-dollar
                   li
-                    label value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value" onclick="set_hidden_one(this)"  ₴
+                    label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"   ₴
                     /a href="#"  ₴
                   /! это ебать её в сраку гривна
                   li
-                    label value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value" onclick="set_hidden_one(this)"  ₸
+                    label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"   ₸
                   /! а это блять тэнге
                   li
-                    label value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value" onclick="set_hidden_one(this)"  BYR
+                    label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"   BYR
               .btn-group
                 button#button1id.btn.btn-default.dropdown-toggle.btn-sm data-toggle="dropdown" name="button1id"
                   | за всё
                   span.caret
                 ul.dropdown-menu role="menu"
                   li
-                    label value="m2" hid="space-unit-value" onclick="set_hidden_one(this)"  за м&sup2;
+                    label.SetHideOne value="m2" hid="space-unit-value"   за м&sup2;
                   li
-                    label value="100" hid="space-unit-value" onclick="set_hidden_one(this)"  за сотку
+                    label.SetHideOne value="100" hid="space-unit-value" за сотку
               .btn-group
                 button#button1id.btn.btn-default.dropdown-toggle.btn-sm data-toggle="dropdown" name="button1id"
                   | в месяц
                   span.caret
                 ul.dropdown-menu role="menu"
                   li
-                    label value="m2" hid="space-unit-value" onclick="set_hidden_one(this)"  за м&sup2;
+                    label.SetHideOne value="m2" hid="space-unit-value"  за м&sup2;
                   li
-                    label value="100" hid="space-unit-value" onclick="set_hidden_one(this)"  за сотку
+                    label.SetHideOne value="100" hid="space-unit-value"  за сотку
             button#button1id.btn.btn-default.btn-sm data-toggle="buttons" name="button1id"
               i.fa.fa-bank.fa-lg
               | в ипотеку
