--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -1,2 +1,286 @@
-h1 Advertisements#new
-p Find me in app/views/advertisements/new.html.slim
+h1 Новое объявление
+.well.well-sm
+  = form_tag advertisements_path, method: :post, class: 'super-form' do |f|
+    = hidden_field_tag :city, '', id: 'city-select'
+    = hidden_field_tag :district, '', id: 'district-select'
+    = hidden_field_tag :category, '', id: 'category-value'
+    = hidden_field_tag :offer_type, '', id: 'offer-type-value'
+    = hidden_field_tag :region, '', id: 'region-select'
+    = hidden_field_tag :currency, '', id: 'currency-value'
+    = hidden_field_tag :space_unit, '', id: 'space-unit-value'
+    = hidden_field_tag :date_from, '', id: 'date-from-value'
+    = hidden_field_tag :date_to, '', id: 'date-to-value'
+    = hidden_field_tag :room_from, '', id: 'rooms-value'
+    = hidden_field_tag :adv_type, '', id: 'adv-type-value'
+    = hidden_field_tag :property_type, '', id: 'property-type-value'
+    legend Раздел
+    .form.form-horizontal role="form"
+      .form-group
+        label.col-sm-3.control-label for="inputEmail3"  Вид сделки
+        .col-sm-9.btn-group.btn-group data-toggle="buttons"
+          label.btn.btn-default.SetHideOne hid="offer-type-value" value="#{AdvEnums::OFFER_TYPES.index(:sale)}"
+            input type="radio"  продажа
+          label.btn.btn-default.SetHideOne hid="offer-type-value"  value="#{AdvEnums::OFFER_TYPES.index(:for_rent)}"
+            input type="radio"  аренда
+          label.btn.btn-default.SetHideOne hid="offer-type-value"  value="#{AdvEnums::OFFER_TYPES.index(:day)}"
+            input type="radio" посуточно
+          label.btn.btn-default.SetHideOne hid="offer-type-value"  value="#{AdvEnums::OFFER_TYPES.index(:buy)}"
+            input type="radio"  куплю
+          label.btn.btn-default.SetHideOne hid="offer-type-value"  value="#{AdvEnums::OFFER_TYPES.index(:rent)}"
+            input type="radio"  сниму
+      .form-group
+        label.col-sm-3.control-label for="inputEmail3"  Тип недвижимости
+        .col-sm-9.btn-toolbar
+          .btn-group.btn-group data-toggle="buttons"
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:flat)}" hid="category-value"
+              input type="radio" квартиры
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:newbuild)}" hid="category-value"
+              input type="radio" новостройки
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:house)}" hid="category-value"
+              input type="radio" дома, дачи, коттеджи
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:ijs)}" hid="category-value"
+              input type="radio" участки под ИЖС
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:room)}" hid="category-value"
+              input type="radio" гостинки
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:room)}" hid="category-value"
+              input type="radio" комнаты
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:garage)}" hid="category-value"
+              input type="radio" гаражи
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:office)}" hid="category-value"
+              input type="radio" офисы
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:trade)}" hid="category-value"
+              input type="radio" торговля и сервис
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:storage)}" hid="category-value"
+              input type="radio" склад и пр-во
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:cafe)}" hid="category-value"
+              input type="radio" бары, рестораны, кафе
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:land)}" hid="category-value"
+              input type="radio" земля, площадки
+            button.btn.btn-default.SetHideOne value="#{AdvEnums::CATEGORIES.index(:free_appointment)}" hid="category-value"
+              input type="radio" другого и свободного назначения
+    legend Местоположение
+    .form.form-horizontal role="form"
+      .form-group
+        label.col-sm-3.control-label
+          i.fa.fa-map-marker.fa-lg
+          | место
+        .col-sm-9.form.form-horizontal
+          span.button-toolbar
+            #region-select-button.button.btn.btn-default data-target=".lbs-example-modal-lg" data-toggle="modal"
+              | Выберите город
+              i.caret
+            #region-select-modal.modal.fade.lbs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel1" role="dialog" tabindex="-2"
+              .modal-dialog
+                .row.modal-content
+                  .modal-header
+                    button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
+                    h4.modal-title Выберите местоположение
+                  .row.modal-body
+                    - @regions.each do |region|
+                      = region.title
+                      p
+                        - Location.children_of(region.id).each do |city|
+                          span
+                            button.btn.btn-default.ClickRegion data-toggle="buttons"  id="city-#{region[1]}" region="#{region.id}" city="#{city.id}"   =city.title
+
+                  .modal-footer
+                    span.pull-left
+                      span.small для уточнений:
+                      a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
+                    button.btn.btn-default data-dismiss="modal" type="button"  Отмена
+                    button.btn.btn-primary.SelectRegion  type="button"  Выбрать
+          .btn-group.btn-group
+            .btn-group.btn-group
+              #city-select-button.button.btn.btn-default data-target=".bs-example-modal-lg" data-toggle="modal"
+                | Выберите район
+                i.caret
+              #city-select-modal.modal.fade.bs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel2" role="dialog" tabindex="-1"
+                .modal-dialog
+                  .row.modal-content
+                    .modal-header
+                      button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
+                      h4.modal-title Выберите район
+                    #cities-list.row.modal-body
+                    .modal-footer
+                      span.pull-left
+                        span.small для уточнений:
+                        a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
+                      button.btn.btn-default data-dismiss="modal" type="button"  Отмена
+                      button.btn.btn-primary.SelectDistrict mv='city-select-modal'  type="button"  Выбрать
+            button.btn.btn-default type="button"
+              span.fa.fa-times
+                |x
+    .form.form-horizontal role="form"
+      .form-group
+        label.col-sm-3.control-label for="street-input"  Улица
+        .col-sm-4
+          input#street-input.form-control name="street"
+      .form-group
+        label.col-sm-3.control-label for="house-input"  Номер дома
+        .col-sm-2
+          input#house-input.form-control name="address"
+      .form-group
+        label.control-label.col-sm-3 for="appendedtext"  Ориентир
+        .col-sm-4
+          input.form-control name="landmark" required="" type="text"
+      .form-group
+        label.control-label.col-sm-3 for="appendedtext"  На карте
+        .col-sm-7
+          script charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=xW1xorCoYr-xI6cCciqN5E8zGSs_rB4x&width=auto&height=250" type="text/javascript"
+    legend Подробности
+    .form.form-horizontal role="form"
+      .form-group
+        label.col-sm-3.control-label for="rooms"  Комнат
+        .col-sm-4
+          span
+            label.radio-inline
+              input#inlineCheckbox1 hid="rooms-value" name="room_from"  type="radio" value="1"  1
+            label.radio-inline
+              input#inlineCheckbox2 hid="rooms-value" name="room_from" type="radio" value="2"  2
+            label.radio-inline
+              input#inlineCheckbox3 hid="rooms-value" name="room_from" type="radio" value="3"  3
+            label.radio-inline
+              input#inlineCheckbox3 hid="rooms-value" name="room_from" type="radio" value="4"  4
+            label.radio-inline
+              input#inlineCheckbox3 hid="rooms-value" name="room_from" type="radio" value="5"  5+
+      .form-group
+        label.col-sm-3.control-label for="inputEmail3"  Материал стен
+        .col-sm-8
+          label.radio-inline
+            input#inlineCheckbox1 type="radio" value="option1"  кирпич
+          label.radio-inline
+            input#inlineCheckbox2 type="radio" value="option2"  панель
+          label.radio-inline
+            input#inlineCheckbox3 type="radio" value="option3"  каркас-монолит
+          label.radio-inline
+            input#inlineCheckbox3 type="radio" value="option3"  остальное
+      .form-group
+        label.control-label.col-sm-3 for="appendedtext"  Площадь
+        .col-sm-2
+          input.form-control name="space_from" required="" type="text"
+      .form-group
+        label.col-sm-3.control-label for="inputPassword3"  Этаж
+        .col-sm-1
+          input.form-control name="floor_from" type="text"
+      .form-group
+    legend Контакт
+    .form.form-horizontal role="form"
+      .form-group
+        label.col-sm-3.control-label for="inputEmail3"  Имя
+        .col-sm-4
+          input#inputEmail3.form-control type="email"
+      .form-group
+        label.col-sm-3.control-label for="inputEmail3"  E-mail
+        .col-sm-4
+          input#inputEmail3.form-control type="email"
+      .form-group
+        label.control-label.col-sm-3 for="appendedtext"  Телефон
+        .col-sm-4
+          input.form-control required="" type="text"
+            p
+              button.btn.btn-link.btn-xs
+                i.fa.fa-plus ещё один
+      .form-group
+        label.col-sm-3.control-label for="inputPassword3"  Пароль два раза
+        .col-sm-4
+          input#inputPassword3.form-control type="password"
+            input#inputPassword3.form-control type="password"
+      .form-group
+        .col-sm-offset-3.col-sm-10
+          .checkbox
+            label
+              input type="checkbox"
+                | согласен с
+                a href="#"  правилами
+    .well.well-sm.col-xs-12
+    legend О недвижимости
+    .row
+      .form.form-inline.form-sm role="form"
+        .form.form-group.form-inline.col-xs-12.col-sm-4.col-md-3
+          label комнат:
+          br/
+        .form.form-group.form-inline.col-xs-12.col-sm-8.col-md-6.col-lg-5
+          label материал стен:
+          br/
+        .form-group.col-xs-4.col-sm-4.col-md-3
+          label площадь:
+          br
+            input#space-result.form-control.input-sm name="space_from" style=("width: 70px")
+              label &nbsp;м&sup2;
+        .form-group.col-xs-3.col-sm-3.col-md-2
+          label этаж:
+          br
+            input#floor-result.form-control.input-sm name="floor-max" style=("width: 35px")
+        .form-group.col-xs-3.col-sm-3.col-md-2
+          label этажей:
+          br
+            input#price-result.form-control.input-sm style=("width: 35px")
+        .form-group.col-xs-12.col-sm-8.col-md-6.col-lg-5
+          label for="exampleInputEmail2"  цена:
+          br
+            input#exampleInputEmail2.form-control.input-sm name="price_from" style=("width: 110px")
+              .btn-group
+                .btn-group
+                  button#button1id.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" name="button1id"
+                    i.fa.fa-rouble.fa-lg
+                    span.caret
+                  ul.dropdown-menu role="menu"
+                    li
+                      a href="#"
+                        i.fa.fa-euro
+                    li
+                      a href="#"
+                        i.fa.fa-dollar
+                    li
+                      label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"  ₴
+                    /! это ебать её в сраку гривна
+                    li
+                      label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"  ₸
+                    /! а это блять тэнге
+                    li
+                      label.SetHideOne value="#{AdvEnums::CURRENCIES.index(:RUR)}" hid="currency-value"  BYR
+                .btn-group
+                  button#button1id.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" name="button1id"
+                    | за всё
+                    span.caret
+                  ul.dropdown-menu role="menu"
+                    li
+                      a href="#"  за м&sup2;
+                    li
+                      a href="#"  за сотку
+              | \&nbsp;&nbsp;
+              label.checkbox-inline
+                input#inlineCheckbox1 type="checkbox" value="option1"  ипотека
+    p
+    .form-group
+      label.control-label for="textarea"  комментарий, который пойдёт на сайт
+      div
+        textarea#textarea.form-control name="comment"
+        span.help-block.small пишите зажигательно, пишите много
+    p
+    .form-group
+      label.control-label for="textarea"  комментарий, который виден только в базе агентства
+      div
+        textarea#textarea.form-control name="private_comment"
+    .well.well-sm.col-xs-12
+    legend Фото, видео
+    .row
+      .form-group.col-xs-4.col-sm-3.col-md-2
+        label &nbsp;
+        .button
+          a.btn.btn-sm.btn-success
+            i.fa.fa-camera
+            | добавить фото
+      .form-group.col-xs-7.col-sm-6.col-md-5.col-lg-4
+        label for="exampleInputPassword2"  описание
+        input#exampleInputPassword2.form-control.input-sm type="text"
+    .form-group
+    .form-group
+      label.control-label for="textarea"  ссылка(?) или код видеохостинга
+      div
+        textarea#textarea.form-control name="textarea"
+        span.help-block.small
+          a youtube.com
+          a rutube.ru
+          a vimeo.com
+    button.btn.btn-primary onclick="submit_form();" Добавить
