--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -1,2 +1,195 @@
-h1 Advertisements#show
-p Find me in app/views/advertisements/show.html.slim
+h1 = @adv.name
+ol.breadcrumb
+  -@adv.locations.each do |k,v|
+    li
+      a = v.title
+  li.active
+    span "Объявление № #{@adv.id}"
+.well.clearfix
+  p.col-lg-12
+    span.pull-right
+      a.btn.btn-warning.btn-xs
+        i.fa.fa-warning.fa-lg
+        | пожаловаться
+      a.btn.btn-default.btn-xs
+        i.fa.fa-book.fa-lg
+        | добавить в блокнот
+    span.small.text-muted
+      = "размещено #{l @adv.created_at}; обновлено #{l @adv.updated_at}; просмотров:"
+      a всего 100500, сегодня 500 Счетчик!
+  .col-xs-12.col-lg-7.pull-right.clearfix
+    img.img-responsive src="http://placehold.it/1024x720" 
+      p.text-center каммент к фото здесь
+      img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+        img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+          img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+            img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+              img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+                img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+                  img.col-xs-2.thumbnail src="http://placehold.it/1024x720" 
+  .col-lg-5.clearfix
+    p =@adv.comment
+    p
+      label цена:
+      span.lead =@adv.price_from.to_s
+      span
+        = succeed ";" do
+          i.fa.fa-rub
+      span
+        = @adv.price_to
+        = succeed "/\u{43c}\u{b2}" do
+          i.fa.fa-rub
+    p
+      span
+        i.fa.fa-life-ring.fa-lg
+        | агентство
+        span
+          a href="#"  = @adv.sales_agent
+        span
+          button.btn.btn-default.btn-xs
+            i.fa.fa-phone.fa-lg
+            | показать телефон
+  .col-lg-8.clearfix
+    script charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=xW1xorCoYr-xI6cCciqN5E8zGSs_rB4x&amp;width=auto&amp;height=250" type="text/javascript" 
+  p.h4.col-sm-12
+    | Больше вариантов недвижимости:
+    a.btn.btn-default.btn-xs переулок Газетный
+    a.btn.btn-default.btn-xs улица Горького
+    a.btn.btn-default.btn-xs ЖК Чебурашка
+    a.btn.btn-default.btn-xs Ленина
+    a.btn.btn-default.btn-xs Нахичевань
+    a.btn.btn-default.btn-xs Левый берег
+  = render partial: 'advertisements/search_results', locals: {search_results: @alt_adv}
+.well.well-sm.col-sm-12.clearfix
+  .form.form-inline
+    label.control-label for="prependedtext" 
+      i.fa.fa-share.fa-lg
+      | предложение
+    .btn-group data-toggle="buttons" 
+      a.active.btn.btn-default продажа
+      a.btn.btn-default аренда
+      a.btn.btn-default посуточно
+    label.control-label for="prependedtext" 
+      i.fa.fa-reply.fa-lg
+      | спрос
+    .btn-group data-toggle="buttons" 
+      a.btn.btn-default куплю
+      a.btn.btn-default сниму
+  .form.form-inline
+    label.control-label for="prependedtext" 
+      i.fa.fa-home.fa-lg
+      | жилая
+    .btn-group data-toggle="buttons" 
+      a.active.btn.btn-default квартиры
+      a.btn.btn-default новостройки
+      a.btn.btn-default дома
+      a.btn.btn-default участки
+      a.btn.btn-default комнаты
+      a.btn.btn-default гаражи
+  /! тип недвижа
+  .form.form-inline
+    label.control-label for="prependedtext" 
+      i.fa.fa-map-marker.fa-lg
+      | место
+    .btn-group
+      button.btn.dropdown-toggle.btn-default data-toggle="dropdown" type="button" 
+        | Ростовская область
+        span.caret
+      ul.dropdown-menu role="menu" 
+        li
+          a href="#"  Action
+        li
+          a href="#"  Another action
+        li
+          a href="#"  Something else here
+        li.divider
+        li
+          a href="#"  Separated link
+    .btn-group.btn-group
+      .btn-group.btn-group
+        button.btn.dropdown-toggle.btn-default data-toggle="dropdown" type="button" 
+          | Ростов-на-Дону
+          span.caret
+        ul.dropdown-menu role="menu" 
+          li
+            a href="#"  Action
+          li
+            a href="#"  Another action
+          li
+            a href="#"  Something else here
+          li
+            a href="#"  Separated link
+      button.btn.btn-default type="button" 
+        span.fa.fa-times
+    span
+      button.active.btn.btn-default.btn-xs
+        | Центр
+        span.fa.fa-times
+      button.active.btn.btn-default.btn-xs type="button" 
+        | Нахичевань
+        span.fa.fa-times
+      button.active.btn.btn-default.btn-xs type="button" 
+        | СЖМ
+        span.fa.fa-times
+  .form.form-group.form-inline
+    label for="exampleInputEmail2"  цена
+    input#exampleInputEmail2.form-control.input-sm style=("width: 110px") 
+      label for="exampleInputPassword2"  &nbsp;—&nbsp;
+      input#exampleInputPassword2.form-control.input-sm style=("width: 110px") 
+        .btn-group
+          .btn-group
+            button#button1id.btn.btn-default.dropdown-toggle.btn-sm data-toggle="dropdown" name="button1id" 
+              i.fa.fa-rouble.fa-lg
+              span.caret
+            ul.dropdown-menu role="menu" 
+              li
+                a href="#" 
+                  i.fa.fa-euro
+              li
+                a href="#" 
+                  i.fa.fa-dollar
+              li
+                a href="#"  ₴
+              /! это ебать её в сраку гривна
+              li
+                a href="#"  ₸
+              /! а это блять тэнге
+              li
+                a href="#"  BYR
+          .btn-group
+            button#button1id.btn.btn-default.dropdown-toggle.btn-sm data-toggle="dropdown" name="button1id" 
+              | за всё
+              span.caret
+            ul.dropdown-menu role="menu" 
+              li
+                a href="#"  за м&sup2;
+              li
+                a href="#"  за сотку
+          .btn-group
+            button#button1id.btn.btn-default.dropdown-toggle.btn-sm data-toggle="dropdown" name="button1id" 
+              | в месяц
+              span.caret
+            ul.dropdown-menu role="menu" 
+              li
+                a href="#"  за м&sup2;
+              li
+                a href="#"  за сотку
+        button#button1id.btn.btn-default.btn-sm data-toggle="buttons" name="button1id" 
+          i.fa.fa-bank
+          | в ипотеку
+        button.btn.btn-default.btn-sm data-toggle="buttons" 
+          i.fa.fa-minus-circle
+          | без агентов
+        button.btn.btn-default.btn-sm href="http://www.dangrossman.info/2012/08/20/a-date-range-picker-for-twitter-bootstrap/" 
+          i.fa.fa-calendar
+          | за всё время
+          span.caret
+  .row
+    .col-md-push-4.col-lg-push-3.col-sm-9.col-md-7.col-lg-6
+      form.small
+        input.form-control
+          p.help-block.small style=("margin-top: 0px; padding-left: 1em")  искать недвижимость по названию улицы, ключевым словам, номеру телефона или объявления
+    .col-md-pull-7.col-lg-pull-6.col-lg-3.col-md-4.col-sm-4.col-xs-8
+      a.btn.btn-primary.btn-lg.btn-block
+        i.fa.fa-search.fa-lg
+        | Найти
