Strange bug in create action - dinamically added attributes not included in the params. f.submit - not working

--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -42,7 +42,7 @@
       | место
     span
       #region-select-button.button.btn.btn-default data-target=".lbs-example-modal-lg" data-toggle="modal"
-        |'Выберите город'
+        |Выберите город
         i.caret
       #region-select-modal.modal.fade.lbs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel1" role="dialog" tabindex="-2"
         .modal-dialog
