--- a/app/views/advertisements/get_attributes.js.erb
+++ b/app/views/advertisements/get_attributes.js.erb
@@ -1,1 +1,1 @@
-$('.attributes').append("<%= j render 'advertisements/attributes', allowed_attributes:  @allowed_attributes %>" )
+$('.attributes').html("<%= j render 'advertisements/attributes', allowed_attributes:  @allowed_attributes %>" )
