--- a/app/views/advertisements/_attributes.html.slim
+++ b/app/views/advertisements/_attributes.html.slim
@@ -3,4 +3,12 @@
     .form-group
       label.col-sm-3.control-label for="street-input"  = t("advertisement.new.#{atr}")
       .col-sm-4
-        input.form-control name="advertisement[#{atr}]"
+        - case atr
+          - when 'currency'
+            = select_tag "advertisement[#{atr}]", options_for_select([['Руб',0], ['Грн',1]]), class: 'form-control', name: "advertisement[#{atr}]"
+          - when /comment/
+            = text_area_tag "advertisement[#{atr}]", nil, class: 'form-control', name: "advertisement[#{atr}]"
+          - when /not_for_agents|mortgage/
+            = check_box_tag "advertisement[#{atr}]",  nil, class: 'form-control', name: "advertisement[#{atr}]"
+          - else
+            input.form-control name="advertisement[#{atr}]"
