photos and params of adv

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,8 @@
 @import "bootstrap/theme";
 @import "vendor/font-awesome";
 @import "vendor/bootstrap-notify";
+@import "vendor/bootstrapValidator.min";
+
+@import "vendor/blueimp-gallery.min";
+@import "vendor/jquery.fileupload";
+@import "vendor/jquery.fileupload-ui";
