--- a/app/views/advertisements/get_attributes.js.erb
+++ b/app/views/advertisements/get_attributes.js.erb
@@ -1,1 +1,4 @@
-$('.attributes').append("<%= j render 'advertisements/attributes', allowed_attributes:  @allowed_attributes %>" )
+$('.attributes').html("<%= j render 'advertisements/attributes' %>")
+<% @allowed_attributes.each do |attr| %>
+    $('.attributes').closest('form').bootstrapValidator('addField', '<%= j attr %>');
+<% end %>
