--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -1,4 +1,5 @@
-=@adv.errors.messages if !@adv.errors.blank?
+.error
+  = @adv.errors.messages if !@adv.errors.blank?
 h1 Новое объявление
 .well.well-sm
   = nested_form_for @adv, html: {class: 'super-form'} do |f|
@@ -100,8 +101,10 @@ h1 Новое объявление
     - if current_user.admin?
       legend Контакт
       .form.form-horizontal role="form"
-        - resource.phones.build() unless params.has_key? :user
-        = nested_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |user_form|
+        /- resource.phones.build() unless params.has_key? :user
+        /= f.fields_for(resource, as: :user_attributes, url: registration_path(resource_name)) do |user_form|
+        = f.fields_for(:user, url: registration_path(resource_name)) do |user_form|
+          =user_form.hidden_field :password, value: "#{Digest::MD5.hexdigest (Time.now.to_s)}"
           .form-group
             label.col-sm-3.control-label for="inputEmail3"  Имя
             .col-sm-4
@@ -140,8 +143,7 @@ h1 Новое объявление
       legend О недвижимости
       .row
         .form.form-horizontal
-          /fast bugofix
-          = render partial: 'advertisements/attributes', locals: {allowed_attributes:  @allowed_attributes}
+
           .attributes
       .well.well-sm.col-xs-12
       legend Фото, видео
